# usbguard-applet-qt

./: CMakeLists.txt  DBusBridge.cpp  DBusBridge.h  DBusTypes.h  DeviceDialog.cpp  DeviceDialog.h  DeviceModel.cpp  DeviceModel.h  LibUsbguard.cpp  LibUsbguard.h  Log.cpp  Log.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QtApplet.pro  README.md  TRANSLATIONS.md  TargetDelegate.cpp  TargetDelegate.h  devicedialog.cpp  devicedialog.h  devicedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  org.usbguard1.xml  usbguard-applet-qt.desktop
.github/: dependabot.yml
.github/workflows/: ci.yml
doc/: README.md  usbguard-applet-qt.roff
resources/: icon.qrc
src/: devicedialog.cpp  devicedialog.h  main.cpp  mainwindow.cpp  mainwindow.h
translations/: generate_translations_qrc.sh
